<resources>
    <string name="ERROR_UNEXPECTED">"Um erro inesperado ocorreu. Tente novamente mais tarde."</string>
    <string name="app_name">Tasks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="remocao_de_tarefa">Remoção de tarefa</string>
    <string name="remover_tarefa">Remover tarefa?</string>
    <string name="entrar">Entrar</string>
    <string name="cadastra_se">cadastra-se</string>
    <string name="cancelar">Cancelar</string>
    <string name="sim">Sim</string>
    <string name="n_o_tenho_uma_conta">não tenho uma conta</string>
    <string name="nome">nome</string>
    <string name="nomee">Nome</string>
    <string name="salvar">Salvar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="descricao">Descrição</string>
    <string name="completo">Completo</string>
    <string name="clique_para_selecionar_a_data">Clique para selecionar a data</string>
    <string name="adicionar_tarefa">Adicionar Tarefa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="descri_o">Descrição</string>
    <string name="prioridade">Prioridade</string>
    <string name="data_limite">Data Limite</string>
    <string name="all_tasks">All_tasks</string>
    <string name="proximos_7_dias">proximos_7_dias</string>
    <string name="experidas">experidas</string>
    <string name="sair">sair</string>
</resources>