<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_tasks"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/all_tasks" />
        <item
            android:id="@+id/nav_next_tasks"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/proximos_7_dias" />
        <item
            android:id="@+id/nav_expired"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/experidas" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_lock"
            android:title="@string/sair"/>
    </group>
</menu>